[tool.poetry]
name = "nonebot-plugin-tetrio-stats"
version = "0.1.0"
description = "一个在nonebot2中查询TRTRIO玩家数据的插件，同时支持绑定TRTRIO账号"
authors = ["scdhh <wallfjjd@gmail.com>"]
packages = [{ include = 'nonebot-plugin-tetrio-stats' }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
